--- a/custom.css
+++ b/custom.css
@@ -3,7 +3,7 @@ body {
 }
 h1,h2,h3,h4 {
 	text-align: center;
-	font-weight: bold;
+	font-weight: 600;
 }
 p {
 	text-align: center;
@@ -29,4 +29,9 @@ img {
 }
 .parrafo_top {
 	font-size: 10px;
+}
+.texto_grande {
+	font-weight: bold;
+	font-size: 50px;
+	text-align: center;	
 }
