--- a/custom.css
+++ b/custom.css
@@ -1,5 +1,5 @@
 body {
-
+	text-align: center;
 }
 h1,h2,h3,h4 {
 	text-align: center;
@@ -19,6 +19,18 @@ ul,li {
 img {
 	width: 100%;
 }
+.text_center {
+	text-align: center;
+}
+.text_left {
+	text-align: left;
+}
+.text_right {
+	text-align: right;
+}
+.margen_interior {
+	padding: 30px;
+}
 #top {
 	background-color: var(--bs-blue);
 	font-weight: bold;
@@ -34,4 +46,26 @@ img {
 	font-weight: bold;
 	font-size: 50px;
 	text-align: center;	
+}
+.borde {
+	border: 1px solid;
+}
+.linea {
+	margin: 0 auto;
+}
+#imagenes_top .col {
+	border: 0;
+}
+
+
+ .col {
+  border: 1px solid #c9c9c9;
+}
+
+ .col:not(:last-child) {
+  border-right-width: 0;
+}
+
+ .row:not(:last-child) .col {
+  border-bottom-width: 0;
 }
